--- a/Pipfile
+++ b/Pipfile
@@ -3,14 +3,32 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[[source]]
+url = "https://pypi.org/simple"
+verify_ssl = true
+
 [packages]
-flask = "*"
-bs4 = "*"
-requests = "*"
-xlsxwriter = "*"
-lxml = "*"
-flask-wtf = "*"
-flask-session = "*"
+Flask = "==2.0.2"
+bs4 = "==0.0.1"
+requests = "==2.26.0"
+XlsxWriter = "==3.0.2"
+lxml = "==4.6.4"
+Flask-WTF = "==1.0.0"
+flask-session = "==0.4.0"
+beautifulsoup4 = "==4.10.0"
+cachelib = "==0.4.1"
+certifi = "==2021.10.8"
+charset-normalizer = "==2.0.8"
+click = "==8.0.3"
+colorama = "==0.4.4"
+idna = "==3.3"
+itsdangerous = "==2.0.1"
+Jinja2 = "==3.0.3"
+MarkupSafe = "==2.0.1"
+soupsieve = "==2.3.1"
+urllib3 = "==1.26.7"
+Werkzeug = "==2.0.2"
+WTForms = "==3.0.0"
 
 [dev-packages]
 autopep8 = "*"
